fixed registration error

--- a/package.json
+++ b/package.json
@@ -55,9 +55,9 @@
 		"video-react": "^0.14.1"
 	},
 	"scripts": {
-		"start": "react-scripts start",
+		"start": "react-scripts --openssl-legacy-provider start",
 		"prod": "serve -s build",
-		"build": "react-scripts build",
+		"build": "react-scripts --openssl-legacy-provider build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"predeploy": "git push && npm run build",
